<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="75dp"
    tools:context=".fragments.EntryFragment">

    <TextView
        android:id="@+id/entry_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_dream_name"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/dark_night_Blue"
        android:textStyle="bold"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="107dp" />

    <RadioButton
        android:id="@+id/entry_view_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry_view_title"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_mood_happy"
        android:button="@null"/>


    <TextView
        android:id="@+id/entry_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dream_date"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_below="@id/entry_view_mood"
        android:layout_marginTop="50dp"
        android:textStyle="italic"
        android:textColor="@color/night_blue"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:id="@+id/entry_view_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_dream_content"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_below="@id/entry_view_date"
        android:layout_marginTop="50dp"
        android:textColor="@color/dark_night_Blue"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="219dp" />
</RelativeLayout>